Allow input with duplicate words for more flexibility