@@ -2,11 +2,13 @@ package ganz.leonard.automatalearning.gui.optionsscreen;
 
 import ganz.leonard.automatalearning.language.Language;
 import ganz.leonard.automatalearning.language.Symbol;
+import ganz.leonard.automatalearning.learning.InputWord;
 import java.io.IOException;
 import java.net.URISyntaxException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -18,28 +20,29 @@ import java.util.stream.Stream;
 public class InputProvider {
 
   private static final String INPUT_FILE_DIRECTORY = "ganz/leonard/automatalearning/input/";
-  private static final Map<Language<?>, Map<List<Object>, Boolean>> LANGUAGES_WITH_DEFAULTS =
+  private static final Map<Language<?>, List<InputWord<Object>>> LANGUAGES_WITH_DEFAULTS =
       new HashMap<>();
 
   static {
     // a*b
-    Map<List<Object>, Boolean> input = new HashMap<>();
-    input.put(List.of('a'), false);
-    input.put(List.of('b'), true);
-    input.put(List.of('a', 'a'), false);
-    input.put(List.of('b', 'a'), false);
-    input.put(List.of('a', 'b', 'a'), false);
-    input.put(List.of('b', 'b', 'a'), false);
-    input.put(List.of('a', 'a', 'a'), false);
-    input.put(List.of('a', 'a', 'a', 'a'), false);
-    input.put(List.of('b', 'a', 'a', 'a'), false);
-    input.put(List.of('a', 'a', 'b', 'a'), false);
-    input.put(List.of('b', 'b'), false);
+    List<InputWord<Object>> input = new ArrayList<>();
+    input.add(new InputWord<>(List.of('a'), false));
+    input.add(new InputWord<>(List.of('b'), true));
+    input.add(new InputWord<>(List.of('a', 'a'), false));
+    input.add(new InputWord<>(List.of('b', 'a'), false));
+    input.add(new InputWord<>(List.of('a', 'b', 'a'), false));
+    input.add(new InputWord<>(List.of('b', 'b', 'a'), false));
+    input.add(new InputWord<>(List.of('a', 'a', 'a'), false));
+    input.add(new InputWord<>(List.of('a', 'a', 'a', 'a'), false));
+    input.add(new InputWord<>(List.of('b', 'a', 'a', 'a'), false));
+    input.add(new InputWord<>(List.of('a', 'a', 'b', 'a'), false));
+    input.add(new InputWord<>(List.of('b', 'b'), false));
     Language<Character> asThenB = new Language<>(new Symbol<>('a').rep().seq(new Symbol<>('b')));
     LANGUAGES_WITH_DEFAULTS.put(asThenB, input);
 
     // aa*b
-    input.put(List.of('b'), false); // only difference to samples above
+    input.remove(new InputWord<>(new ArrayList<Object>(List.of('b')), true));
+    input.add(new InputWord<>(List.of('b'), false)); // only difference to samples above
     Language<Character> leadingaThenAsThenB =
         new Language<>(new Symbol<>('a').seq(new Symbol<>('a').rep()).seq(new Symbol<>('b')));
     LANGUAGES_WITH_DEFAULTS.put(leadingaThenAsThenB, input);
@@ -48,7 +51,7 @@ public class InputProvider {
 
     Language<Integer> oneTwosThree =
         new Language<>(new Symbol<>(1).seq(new Symbol<>(2).rep()).seq(new Symbol<>(3)));
-    LANGUAGES_WITH_DEFAULTS.put(oneTwosThree, Map.of());
+    LANGUAGES_WITH_DEFAULTS.put(oneTwosThree, List.of());
   }
 
   public static Set<Path> getAvailableInputFiles() {
@@ -75,7 +78,7 @@ public class InputProvider {
    * @return input words and whether they're part of the language or not
    * @throws IOException if the specified file cannot be read
    */
-  public static Map<List<Object>, Boolean> readFromFile(Path pathInResources) throws IOException {
+  public static List<InputWord<Object>> readFromFile(Path pathInResources) throws IOException {
     System.out.println("Reading input from: " + pathInResources.toAbsolutePath());
     List<String> lines = Files.readAllLines(pathInResources);
     return lines.stream()
@@ -84,10 +87,16 @@ public class InputProvider {
                 line != null
                     && line.length() >= 1
                     && (line.charAt(0) == '+' || line.charAt(0) == '-'))
-        .collect(
-            Collectors.toMap(
-                line -> line.chars().mapToObj(ch -> (char) ch).skip(1).collect(Collectors.toList()),
-                line -> line.charAt(0) == '+'));
+        .map(
+            line ->
+                new InputWord<>(
+                    new ArrayList<Object>(
+                        line.chars()
+                            .mapToObj(ch -> (char) ch)
+                            .skip(1)
+                            .collect(Collectors.toList())),
+                    line.charAt(0) == '+'))
+        .toList();
   }
 
   /**
@@ -100,14 +109,13 @@ public class InputProvider {
    *     removed and defaults being added the final amount of samples is in general not equal to the
    *     parameter 'samples'
    */
-  public static Map<List<Object>, Boolean> generateSamples(Language<?> language, int samples) {
-    Map<List<Object>, Boolean> input =
+  public static List<InputWord<Object>> generateSamples(Language<?> language, int samples) {
+    List<InputWord<Object>> input =
         IntStream.range(0, samples)
             .boxed()
-            .collect(
-                Collectors.toMap(
-                    __ -> (List<Object>) language.generateSample(), __ -> true, (k1, k2) -> k1));
-    input.putAll(LANGUAGES_WITH_DEFAULTS.get(language));
+            .map(__ -> new InputWord<Object>(new ArrayList<>(language.generateSample()), true))
+            .collect(Collectors.toList());
+    input.addAll(LANGUAGES_WITH_DEFAULTS.get(language));
     return input;
   }
 }
